modify style , fix title too long

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -32,13 +32,20 @@ $content-bg-color:#ffffff; // 网页模块内容背景色
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    padding: 0px 7px; // justify-content: space-around;
+    justify-content: space-between;
     .box-item {
-        height: 180px;
-        width: calc(90% / 3);
-        flex: 1 1 1;
+        min-height: 180px;
+        max-width: 32%;
+        flex: 1 1 100%;
         margin-bottom: 5px;
     }
+}
+
+.box:after {
+    content: "";
+    flex: 1 1 100%;
+    max-width: 32%;
 }
 
 .section {
