--- a/src/pages/bangumi/bangumi-list/bangumi-list.scss
+++ b/src/pages/bangumi/bangumi-list/bangumi-list.scss
@@ -1,2 +1,14 @@
 page-bangumi-list {
+    .cover {
+        width: 100%;
+        max-height: 180px;
+        img {
+            border-radius: 5px;
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .subtitle {
+        line-height: 20px;
+    }
 }
