--- a/src/pages/bangumi/bangumi.scss
+++ b/src/pages/bangumi/bangumi.scss
@@ -4,29 +4,31 @@ page-bangumi {
     }
     .scroll-content {
         background-color: $page-bg-color;
-    } // .swiper-pagination {
-    //   text-align: right;
-    //   padding-right: 10px;
-    // }
+    }
     .card {
         background-color: $content-bg-color;
         margin: 0px 0px 10px 0px;
         .title {
-            padding: 5px;
+            padding: 6px;
+            font-weight: 600;
+            font-size: 13px;
         }
-        .cover{
-          width: 100%;
-          height: calc(100% - 20px);
-          img {
-            border-radius: 5px;
+        .cover {
             width: 100%;
-            height: 100%;
-          }
+            max-height: 180px;
+            img {
+                border-radius: 5px;
+                width: 100%;
+                height: 100%;
+            }
         }
-        
         .subtitle {
-            height: 20px;
             line-height: 20px;
         }
     }
 }
+
+// .swiper-pagination {
+//   text-align: right;
+//   padding-right: 10px;
+// }
